# bode_cpp

./: .gitignore  README.md
lib_algo/: configure.ac
lib_algo/src/: Makefile.am  baseComposition.cpp  bodealgo.cpp  chromCounter.cpp  locationFilter.cpp  readCounter.cpp  screenLinker.cpp  screener.cpp
lib_algo/src/bode/: Makefile.am  baseComposition.h  bodealgo.h  chromCounter.h  locationFilter.h  readCounter.h  readCounterStranded.h  screener.h
lib_algo/test/: Makefile.am  skel_test.h
lib_align/: README  configure.ac
lib_align/src/: Makefile.am  aligner.cpp  alignerEndsFree.cpp  alignerGlobal.cpp  alignerLocal.cpp  alignerPartialFree.cpp  alignment.cpp  alignmentException.cpp  bodealign.cpp
lib_align/src/bode/: Makefile.am  aligner.h  alignerEndsFree.h  alignerGlobal.h  alignerLocal.h  alignerPartialFree.h  alignment.h  alignmentException.h  bodealign.h
lib_align/test/: Makefile.am  alignment_test.h
lib_io/: configure.ac
lib_io/doc/: bamPairs.txt
lib_io/src/: Makefile.am  bamReader.cpp  bamWriter.cpp  bedReader.cpp  bodeio.cpp  cffReader.cpp  fastaReader.cpp  fastqReader.cpp  intervalReader.cpp  sequenceReader.cpp  writer.cpp
lib_io/src/bode/: Makefile.am  bamReader.h  bamWriter.h  bedReader.h  bodeio.h  cffReader.h  fastaReader.h  fastqReader.h  intervalReader.h  sequenceReader.h  writer.h
lib_io/test/: Makefile.am  bamio_test.h  bedio_test.h  io_test.h
lib_io/test/testdata/: test_input.bam  test_input.bed  test_input.sam
lib_scraps/: ChangeLog  INSTALL  configure.ac
lib_scraps/src/: Makefile.am  bigtest.c  cigar_fmt_test.cpp  eland2fq.c  endian.cpp  sam2fq.c  testWrite.c
lib_seq/: NEWS  configure.ac
lib_seq/src/: Makefile.am  bam.cpp  bed.cpp  bodeseq.cpp  fasta.cpp  fastq.cpp  interval.cpp  sequence.cpp
lib_seq/src/bode/: Makefile.am  bam.h  bed.h  bodeseq.h  fasta.h  fastq.h  interval.h  sequence.h
lib_seq/test/: Makefile.am  bed_test.h
lib_tree/: configure.ac
lib_tree/src/: Makefile.am  bodetree.cpp  intervalNode.cpp  intervalSet.cpp  intervalSetLeft.cpp  intervalSetSplit.cpp  intervalTree.cpp  intervalTreeLeft.cpp  intervalTreeSplit.cpp
lib_tree/src/bode/: Makefile.am  bodetree.h  intervalNode.h  intervalSet.h  intervalSetLeft.h  intervalSetSplit.h  intervalTree.h  intervalTreeLeft.h  intervalTreeSplit.h
lib_tree/test/: Makefile.am  intervalNode_test.h  intervalSet_test.h  intervalTreeSplit_test.h  intervalTree_test.h  map_test.h
lib_util/: Makefile.am  configure.ac
lib_util/doc/: Makefile.am
lib_util/doc/doxygen/: Doxyfile.in  Makefile.am  customdoxygen.css
lib_util/src/: Makefile.am  bitBucket.cpp  bodeException.cpp  chromosome.cpp  cigar.cpp  configuration.cpp  densitySet.cpp  flags.cpp  genomeData.cpp  histogram.cpp  intervalDensity.cpp  lineType.cpp  log.cpp  ticker.cpp  util.cpp
lib_util/src/bode/: Makefile.am  bodeException.h  bodeutil.h  chromosome.h  cigar.h  configuration.h  densitySet.h  flags.h  genomeData.h  histogram.h  lineType.h  log.h  ticker.h  util.h
lib_util/test/: Makefile.am  bitBucket_test.h  bodeException_test.h  chromosome_test.h  cigar_test.h  configuration_test.h  densitySet_test.h  flags_test.h  histogram_test.h  intervalDensity_test.h  lineType_test.h  log_test.h  util_test.h
lib_util/test/testdata/: runProgMeter.cpp  sheet_dos.txt  sheet_mac.txt  sheet_mixed.txt  sheet_unix.txt  test_peaks_chr21.bed
tools/: configure.ac
tools/src/: Makefile.am  README_makeCDT  baseComposition.cpp  bgr2cdt.cpp  bodeskel.cpp  countKmers.c  countManyLinkers.c  countReadsOnChroms.cpp  countReadsOnIntervals.cpp  dumpBam.c  filterByRegion.cpp  findSummit.cpp  mac2unix.c  makeBedgraph.cpp  makeCDT.cpp  makeDensity.cpp  qualityHistogram.cpp  randomSubseq.c  readDensityMap.cpp  readDepth.cpp  screenLinker.c  screenLinkerExact.c  stripBam.c
tools_legacy/: configure.ac
tools_legacy/include/: calign.h  dictionary.h  fasta.h  fastareader.h  fastq.h  histogram.h  interval_set.h  pairlist.h  pairlistAnnot.h  quality.h  queue.h  redblack.h  redblackSN.h  sequence.h  util.h
tools_legacy/src/: Makefile.am  README_makeWiggle  README_screenLinker  TODO_screenLinker  coverage.c  dustfilter.c  errorRates.c  filterLength.c  filterOut.c  fixFastq.c  lc.c  makeWiggle.c  sampleFQ.c  screenLinker.c  screenLinker_paired.c  solexa2phred.c  sortBed.c  summarizeDuplicates.c  summarizeDuplicatesBam.c  summarizeDuplicates_dict.c  summarizeFile.c  testQualityScale.c
tools_legacy/src/util/: Makefile.am  calign.c  dictionary.c  dictionary_test.c  fasta.c  fastareader.c  fastareader_test.c  fastq.c  histogram.c  interval_set.c  interval_set_test.c  pairlist.c  pairlistAnnot.c  quality.c  queue.c  queue_test.c  redblack.c  redblackSN.c  redblack_test.c  sequence.c  sequence_test.c  util.c  util_test.c
