bodeincludedir = $(includedir)/bode
bodeinclude_HEADERS = aligner.h            \
                      alignerEndsFree.h    \
                      alignerGlobal.h      \
                      alignerLocal.h       \
                      alignerPartialFree.h \
                      alignment.h          \
                      alignmentException.h \
                      bodealign.h
