bodeincludedir = $(includedir)/bode
bodeinclude_HEADERS = bamReader.h          \
                      bamWriter.h          \
                      bedReader.h          \
                      bodeio.h             \
                      cffReader.h          \
                      fastaReader.h        \
                      fastqReader.h        \
                      intervalReader.h     \
                      samReader.h          \
                      samWriter.h          \
                      sequenceReader.h     \
                      writer.h
