bodeincludedir = $(includedir)/bode
bodeinclude_HEADERS = bamReader.h          \
                      bamWriter.h          \
                      bedReader.h          \
                      bodeio.h             \
                      cffReader.h          \
                      fastaReader.h        \
                      fastqReader.h        \
                      intervalReader.h     \
                      sequenceReader.h     \
                      writer.h
