bodeincludedir = $(includedir)/bode
bodeinclude_HEADERS = bodetree.h           \
                      intervalNode.h       \
                      intervalSet.h        \
                      intervalSetLeft.h    \
                      intervalSetSplit.h   \
                      intervalTree.h       \
                      intervalTreeLeft.h   \
                      intervalTreeSplit.h
