bodeincludedir = $(includedir)/bode
bodeinclude_HEADERS = bitBucket.h          \
                      bodeException.h      \
                      chromosome.h         \
                      cigar.h              \
                      configuration.h      \
                      densitySet.h         \
                      flags.h              \
                      genomeData.h         \
                      histogram.h          \
                      intervalDensity.h    \
                      lineType.h           \
                      log.h                \
                      ticker.h             \
                      util.h
