noinst_LIBRARIES = libgutil.a
libgutil_a_SOURCES = calign.c        \
                     dictionary.c    \
                     fasta.c         \
                     fastareader.c   \
                     fastq.c         \
                     histogram.c     \
                     interval_set.c  \
                     pairlist.c      \
                     pairlistAnnot.c \
                     quality.c       \
                     queue.c         \
                     redblack.c      \
                     redblackSN.c    \
                     sequence.c      \
                     util.c
AM_CPPFLAGS = -I@top_srcdir@/include
